--- a/Dussehra.css
+++ b/Dussehra.css
@@ -11,6 +11,7 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    align-content: center;
     /* background-color: aqua;   */
 }
 
