--- a/Dussehra.css
+++ b/Dussehra.css
@@ -1,5 +1,6 @@
 body{
-    background-color: red;
+    /* background-color: red; */
+    background: url(./bg.jpg);
 }
 
 .main-container{
@@ -17,13 +18,13 @@ body{
 
 .heading{
     text-align: center;
-    font-size: 80px;
-    color: black;
+    font-size: 70px;
+    color: red;
     font-weight: bolder;
 }
 
 .div-border{
-    border: solid 4px black;
+    border: solid 4px yellowgreen;
     border-radius: 30px;
 }
 
