--- a/Dussehra.css
+++ b/Dussehra.css
@@ -31,3 +31,13 @@ body{
 .img-styling{
     margin-top: 10px;
 }
+
+.footer{
+    display: flex;
+    background-color: aqua;
+    justify-content: center;
+    flex-wrap: wrap;
+    color: black;
+    border-radius: 10px;
+    font-weight: bolder;
+}
