--- a/Dussehra.css
+++ b/Dussehra.css
@@ -26,6 +26,8 @@ body{
 .div-border{
     border: solid 4px yellowgreen;
     border-radius: 30px;
+    position: sticky;
+    top: 5px;
 }
 
 .img-styling{
